    better emulate the old style glob code to fail when a
    non-glob entry in the config file is missing.
  * dh_installdocs: Use the new glob_expand error handler to
    restore the behaviour to that of debhelper/10.5.1 and older.
    Thanks to Christoph Berg for reporting the issue.
    (Closes: #902355)
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.

 -- Niels Thykier <niels@thykier.net>  Sat, 30 Jun 2018 11:16:30 +0000

debhelper (11.3.4) unstable; urgency=medium

  * Dh_Lib.pm: Fix bug that made the parser assign the wrong
    value from the Build-Profiles field.  Thanks to Sven Joachim
    for reporting the bug.  (Closes: #902268)
  * debhelper.pod: Rewrite the compat 11 change on "main doc
    packages" in an attempt to clarify what is happening in
    compat 11.  Thanks to Paul Gevers for pointing out some of
    the confusing aspects.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Jun 2018 09:46:35 +0000

debhelper (11.3.3) unstable; urgency=medium

  [ Niels Thykier ]
  * d/control: Remove versioned Breaks on qt5-qmake as it
    prevents others from backporting qt5 packages to
    stable-backports.  The Breaks was added to assist
    cross-building in buster and it has already served that
    purpose by now.
  * Dh_Lib.pm: Provide a more helpful diagnostic message when
    an executable config file fails and it does not have a
    #!-line (and is not an ELF binary).  Thanks to Nadav
    Ruskin for the suggestion.  (Closes: #902214)
  * debhelper.pod: Make a dedicated subsection about executable
    debhelper config files to make them more prominent.  Thanks
    to Nadav Ruskin for the suggestion.  (Closes: #901715)
  * Dh_Lib.pm: Avoid forking a shell when running executable
    debhelper config files.
  * Dh_Lib.pm: Validate package names according the rules for
    Debian packages.  Thanks to Raphael Geissert and Tim
    Düsterhus for the suggestion.  (Closes: #567178)