@@ -10,6 +10,10 @@ debhelper (11.3.5) UNRELEASED; urgency=medium
   * dh_installexamples: Ditto.
   * dh_installinfo: Ditto.
   * dh_installman: Ditto.
+  * Dh_Lib.pm: Fix a bug where ending debian/control on (what
+    debhelper believed was) a comment line could cause debhelper
+    to omit the last package listed in the file.  Thanks to
+    Santiago Vila for reporting the bug. (Closes: #902748)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 30 Jun 2018 11:16:30 +0000
 
